<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="24dp"
    tools:context=".presentation.ui.add.AddProductFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_add_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:paddingHorizontal="64dp"
            android:layout_marginHorizontal="24dp"
            android:text="@string/add_product"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_name_product"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@id/tv_add_product"
            app:layout_constraintStart_toStartOf="@id/tv_add_product"
            app:layout_constraintTop_toBottomOf="@id/tv_add_product">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_name"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_amount_product"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@id/tv_add_product"
            app:layout_constraintStart_toStartOf="@id/tv_add_product"
            app:layout_constraintTop_toBottomOf="@id/tf_name_product"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_amount_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/amount_product"
                android:inputType="number"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_supplier"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@id/tv_add_product"
            app:layout_constraintStart_toStartOf="@id/tv_add_product"
            app:layout_constraintTop_toBottomOf="@id/tf_amount_product"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_supplier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/supplier"
                android:inputType="text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="?actionBarSize"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="36dp"
            android:backgroundTint="@color/green"
            android:text="@string/save"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@id/tv_add_product"
            app:layout_constraintStart_toStartOf="@id/tv_add_product"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tf_supplier" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>