<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/blue_ocean"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/constraint_layout"
            app:layout_constraintBottom_toBottomOf="@id/constraint_layout"
            app:layout_constraintEnd_toStartOf="@id/guideline"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15"/>

        <TextView
            android:id="@+id/tv_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/app_name"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.45"/>

        <TextView
            android:id="@+id/tv_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:text="@string/amount"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/tv_product_name"
            app:layout_constraintStart_toEndOf="@id/guideline"/>

        <TextView
            android:id="@+id/tv_amount_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textSize="12sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="@id/tv_amount"
            app:layout_constraintStart_toEndOf="@id/guideline1"/>

        <TextView
            android:id="@+id/tv_supplier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:text="@string/supplier"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/tv_amount"
            app:layout_constraintStart_toEndOf="@id/guideline"/>

        <TextView
            android:id="@+id/tv_supplier_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supplier"
            android:textSize="12sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="@id/tv_supplier"
            app:layout_constraintStart_toEndOf="@id/guideline1"/>

        <TextView
            android:id="@+id/tv_updated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:paddingBottom="8dp"
            android:text="@string/updated_in"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/tv_supplier"
            app:layout_constraintStart_toEndOf="@id/guideline"/>

        <TextView
            android:id="@+id/tv_updated_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/updated_in"
            android:textSize="12sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="@id/tv_updated"
            app:layout_constraintStart_toEndOf="@id/guideline1"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>