<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="24dp"
    tools:context=".presentation.ui.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp"
        android:background="@color/white">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/siv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:src="@drawable/ic_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_add_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:paddingHorizontal="64dp"
            android:layout_marginHorizontal="24dp"
            android:text="@string/profile_user"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.35"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/siv_person"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:src="@drawable/ic_person_blue"
            app:layout_constraintStart_toStartOf="@id/tv_add_product"
            app:layout_constraintTop_toBottomOf="@id/tv_add_product"/>

        <TextView
            android:id="@+id/tv_name_employee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/siv_person"
            app:layout_constraintBottom_toBottomOf="@id/siv_person"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/siv_role"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_role"
            app:layout_constraintStart_toStartOf="@id/siv_person"
            app:layout_constraintTop_toBottomOf="@id/siv_person"/>

        <TextView
            android:id="@+id/tv_role_employee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/siv_role"
            app:layout_constraintBottom_toBottomOf="@id/siv_role"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_logout"
            android:layout_width="0dp"
            android:layout_height="?actionBarSize"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="36dp"
            android:backgroundTint="@color/red"
            android:text="@string/logout"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@id/tv_add_product"
            app:layout_constraintStart_toStartOf="@id/tv_add_product"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/siv_role" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>